fix: upload only 1 image
